[gd_scene load_steps=4 format=3 uid="uid://b3b327bgw11lm"]

[ext_resource type="Script" uid="uid://bjkavmkinmv3k" path="res://script/pause_scene.gd" id="1_8w2mf"]
[ext_resource type="FontFile" uid="uid://dbdvbgducoq2q" path="res://ARCADE.TTF" id="1_mfaka"]

[sub_resource type="LabelSettings" id="LabelSettings_8w2mf"]
font = ExtResource("1_mfaka")
font_size = 80

[node name="pause_scene" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8w2mf")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -199.0
offset_right = 222.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME PAUSED"
label_settings = SubResource("LabelSettings_8w2mf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 838.0
offset_top = 481.0
offset_right = 1099.0
offset_bottom = 721.0
theme_override_constants/separation = 18

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mfaka")
theme_override_font_sizes/font_size = 60
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mfaka")
theme_override_font_sizes/font_size = 60
text = "Restart"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mfaka")
theme_override_font_sizes/font_size = 60
text = "Quit"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_main_menu_pressed"]
